avance con la definición de la api en swagger
